styled links and fixed foooter alignment

--- a/week2/codecademyClone/style.css
+++ b/week2/codecademyClone/style.css
@@ -6,6 +6,7 @@
   --dark-blue-bg-color: #10162f;
   --yellow-bg-color: #f4d302;
   --dark-beige-hover-color: #f1e3db;
+  --gray-bg-hover-color: #f1f1f3;
   --light-pink-bg-color: #fef5ff;
   --text-color: #10162f;
   --link-color: #3810db;
@@ -53,6 +54,10 @@ button {
   height: 40px;
   font-weight: 500;
 }
+button:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
 .container {
   width: 100%;
   height: 100%;
@@ -90,6 +95,10 @@ header {
   padding: 0.5rem 0.8rem;
   border-radius: 4px;
   font-weight: 600;
+  color: var(--link-color);
+}
+.header-login:hover {
+  background-color: var(--dark-beige-hover-color);
 }
 .hamburger-menu {
   margin-left: 0.5rem;
@@ -132,9 +141,9 @@ header {
 }
 .password-label-wrapper i:hover + .form-info-box {
   position: absolute;
-  top: 1.5rem;
+  top: 2rem;
   right: -1rem;
-  width: 14rem; /* 70% */
+  width: 70%;
   padding: 1rem;
   background-color: var(--white-color);
   border: 1px solid var(--black-color);
@@ -148,6 +157,13 @@ header {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
+.terms-policy a {
+  color: var(--link-color);
+  text-decoration: underline;
+}
+.terms-policy a:hover {
+  text-decoration: none;
+}
 .signup-social-title {
   font-size: 1rem;
 }
@@ -160,6 +176,9 @@ header {
   background-color: var(--white-color);
   margin-right: 1rem;
 }
+.signup-icon:hover {
+  background-color: var(--gray-bg-hover-color);
+}
 
 /* ----------- Goals-Paths Section ---------- */
 .goals-title {
@@ -167,25 +186,31 @@ header {
 }
 .goals-list-item {
   border-bottom: 1px solid black;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding: 0.5rem;
   position: relative;
+  transition: padding-top 150ms, padding-bottom 150ms;
+  cursor: pointer;
+}
+.goals-list-item:hover {
+  background-color: var(--white-color);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .goals-list-item:last-child {
   border-bottom: none;
 }
 .goals-list-item h3,
-.goals-list-item > i {
+.goals-list-item i {
   font-size: 1.2rem;
 }
-.goals-list-item > i {
+.goals-list-item i {
   position: absolute;
   bottom: 1.9rem;
   right: 2rem;
 }
 .paths-wrapper,
 .catalog-link-wrapper,
-.build-career > p {
+.build-career p {
   display: none;
 }
 
@@ -208,6 +233,10 @@ header {
   margin-bottom: 0.5rem;
   font-size: 1.2rem;
 }
+.self-learning-list-item:hover,
+.active {
+  background-color: var(--blue-bg-color);
+}
 .self-learning-list-item a {
   color: var(--white-color);
   letter-spacing: 1.5px;
@@ -224,6 +253,9 @@ header {
 .people-stories-card {
   margin-bottom: 1rem;
 }
+.people-stories-card a:hover {
+  color: var(--link-color);
+}
 .pp-wrapper img {
   border: 1px solid black;
 }
@@ -233,7 +265,12 @@ header {
   font-size: 1.3rem;
 }
 .people-stories-explore-link {
+  padding: 0.5rem 0.8rem;
   text-align: center;
+  border-radius: 4px;
+}
+.people-stories-explore-link:hover {
+  background-color: var(--dark-beige-hover-color);
 }
 .people-stories-explore-link a {
   color: var(--link-color);
@@ -276,8 +313,12 @@ header {
   padding-bottom: 4rem;
 }
 .where-to-start-img-wrapper {
-  width: 50%;
+  width: 70%;
   margin: 2rem auto;
+}
+.where-to-start-img-wrapper img {
+  max-width: 21rem;
+  max-height: 21rem;
 }
 .where-to-start-title {
   margin-bottom: 0.5rem;
@@ -343,12 +384,6 @@ header {
 }
 
 /* ----------- Footer ---------- */
-
-/* ----------- Footer Codecademy Info Section ---------- */
-.footer-wrapper {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 footer li {
   line-height: 2;
 }
@@ -356,6 +391,14 @@ footer h2 {
   font-size: inherit;
   font-weight: 400;
   text-transform: uppercase;
+}
+footer a:hover {
+  color: var(--link-color);
+}
+/* ----------- Footer Codecademy Info Section ---------- */
+.footer-wrapper {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .footer-codecademy-info-wrapper {
   padding-top: 1rem;
@@ -496,6 +539,10 @@ footer h2 {
   .start-for-free-title {
     margin-top: 0;
   }
+  /* ------ Small Media Footer ----- */
+  footer {
+    font-size: 14px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -532,8 +579,8 @@ footer h2 {
   }
   .people-stories-explore-link {
     position: absolute;
-    top: 7rem;
-    right: 1rem;
+    top: 9.5rem;
+    right: 0rem;
   }
   .people-stories-cards-wrapper {
     display: grid;
@@ -556,6 +603,10 @@ footer h2 {
   }
 
   /* ------ Medium Media Start For Free Section ----- */
+  .start-for-free-wrapper {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
   .start-for-free-sm-screen-img {
     display: none;
   }
@@ -565,10 +616,28 @@ footer h2 {
   .start-for-free-info {
     width: 70%;
     justify-self: end;
+    align-self: center;
   }
 
   /* ------ Medium Media Footer  ----- */
+  .footer-codecademy-info-wrapper {
+    grid-template-areas:
+      "company resources community"
+      "mobile individual enterprise"
+      "mobile support .";
+  }
+  .company {
+    grid-area: company;
+  }
+  .resources {
+    grid-area: resources;
+  }
+  .community {
+    grid-area: community;
+  }
   .mobile {
+    grid-area: mobile;
+    align-self: flex-end;
     grid-column: span 1;
   }
   .mobile-list {
@@ -577,8 +646,24 @@ footer h2 {
   .mobile-list li {
     flex: 0;
   }
-  .mobile-list li img {
-    width: 40%;
+  .individual {
+    grid-area: individual;
+  }
+  .enterprise {
+    grid-area: enterprise;
+  }
+  .support {
+    grid-area: support;
+  }
+  .footer-course-catalog-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .subjects {
+    order: -1;
+  }
+  .subjects-list {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -599,6 +684,9 @@ footer h2 {
   .nav-list-item {
     margin-left: 1.5rem;
   }
+  .nav-list-item a:hover {
+    color: var(--link-color);
+  }
   .nav-list-item i {
     margin-left: 0.2rem;
   }
@@ -609,7 +697,10 @@ footer h2 {
   .header-search-button {
     display: block;
     background: none;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+  }
+  .header-search-button:hover {
+    background-color: var(--dark-beige-hover-color);
   }
   .hamburger-menu {
     display: none;
@@ -621,12 +712,12 @@ footer h2 {
   }
 
   /* ------ Large Media Goals-Paths Section ----- */
-  .goals-list .build-career > i {
+  .goals-list i {
     display: none;
   }
   .paths-wrapper,
   .catalog-link-wrapper,
-  .build-career > p {
+  .build-career p {
     display: block;
   }
   .goals-paths-wrapper {
@@ -645,7 +736,14 @@ footer h2 {
   }
   .path-box {
     margin-bottom: 0;
+    transition: box-shadow 200ms, transform 200ms;
+    cursor: pointer;
   }
+  .path-box:hover {
+    box-shadow: -0.5rem 0.5rem var(--black-color);
+    transform: translateY(-0.5rem) translateX(0.5rem);
+  }
+
   .paths-wrapper {
     background: url("./img/paths-dot-pattern.svg");
     padding: 2rem;
@@ -696,6 +794,7 @@ footer h2 {
     padding: 2px 4px;
   }
   .catalog-link-wrapper {
+    grid-column: 2 / 3;
     margin-bottom: 1rem;
     text-align: right;
   }
@@ -703,6 +802,11 @@ footer h2 {
     color: var(--link-color);
     font-weight: 600;
     font-size: 14px;
+    padding: 0.5rem 0.8rem;
+    border-radius: 4px;
+  }
+  .catalog-link:hover {
+    background-color: var(--dark-beige-hover-color);
   }
   .catalog-link i {
     position: initial;
@@ -787,19 +891,10 @@ footer h2 {
   .footer-codecademy-info-wrapper {
     border-bottom: none;
     border-right: 1px solid var(--black-color);
+    padding: 1rem;
   }
   #footer-policies-section {
     grid-column: 1 / 3;
-  }
-  .footer-course-catalog-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .subjects {
-    order: -1;
-  }
-  .subjects-list {
-    grid-template-columns: 1fr;
   }
   .footer-policies-wrapper {
     display: flex;
